<resources>
    <string name="app_name"></string>
    <string name="button1"></string>
    <string name="button2"></string>
    <string name="button3"></string>
    <string name="button4"></string>
    <string name="button5"></string>
    <string name="main_quiz">Choose A Quiz From Menu</string>
    <string name="score">Score Board</string>

    <!--* each question has three values-->
        <!--* query: the text of the question-->
        <!--* answers: string array of all answers-->
        <!--* values: int array of the correctness of each corresponding answer. = 1 if correct, = 0 if incorrect-->
        <!--* answers.length = values.length-->
    <!--* can have any number of correct answers-->
    <string-array name="linear_quizzes">
        <item>{
            \"title\":\"Grammy Quiz\",
            \"questions\" :
    [
            {
            \"query\": \"What was the best rap song in 2016\",
            \"answers\" : [\"Energy\",\"Trap Queen\", \"Glory\",\"Alright\", \"All Day\"],
            \"values\" : [0, 0, 0, 1, 0]
            },

            {
            \"query\": \"What was the Song of the Year in 1998\",
            \"answers\" : [\"Sunny Come Home\", \"I Believe I Can Fly\",\"OK Computer\"],
            \"values\" : [1, 0, 0]
            },

            {
            \"query\": \"Which artist hasn\'t won a Grammy?\",
            \"answers\" : [\"Snoop Dog\", \"Nas\",\"Drake\", \"Bon Iver\"],
            \"values\" : [1, 1, 0, 0]
            },

            {
            \"query\": \"What was the best Alternative Album in the 60th Annual Grammys\",
            \"answers\" : [\"Everything Now\",\"Humanz\", \"Sleep Well Beast\",\"American Dream\"],
            \"values\" : [0, 0, 1, 0]
            }

    ]
        }</item>
        <item>{
            \"title\":\"Quick Maths Quiz\",
            \"questions\" :
    [
            {
            \"query\": \"What is the 12*12?\",
            \"answers\" : [\"100\",\"144\",\"12\",\"42\",\"156\"],
            \"values\" : [0, 1, 0, 0, 0]
            },

            {
            \"query\": \"2+2-1\",
            \"answers\" : [\"3\", \"2\",\"Not Enough Information\"],
            \"values\" : [1, 0, 0]
            },

             {
            \"query\": \"3+3*3-3+3\",
            \"answers\" : [\"18\", \"3\",\"12\",\"6\"],
            \"values\" : [0, 0, 1, 0]
            },

             {
            \"query\": \"If you choose an answer to this question at random, what is the chance you will be correct (in percentages)\",
            \"answers\" : [\"25\", \"50\",\"0\",\"300\"],
            \"values\" : [1, 0, 0, 0]
            },

            {
            \"query\": \"For this question, none of the answers are correct\",
            \"answers\" : [\"100000\", \"5\",\"900\",\"0\"],
            \"values\" : [0, 0, 0, 0]
            }
    ]
        }
        </item>
        <item>{
            \"title\":\"Camera Master\",
            \"questions\" :
    [
            {
            \"query\": \"The amount of light or darkness on a photograph is known as the\",
            \"answers\" : [\"Exposure\",\"Shutter Speed\", \"Contrast\"],
            \"values\" : [1, 0, 0]
            },

            {
            \"query\": \"In a gig setting (ie low light), the ISO should be set to\",
            \"answers\" : [\"About f over 2.8\", \"The lowest setting for that camera\",\"It Depends\"],
            \"values\" : [0, 0, 1]
            }
    ]
        }</item>

    </string-array>

    <!--* everything else same as linear quiz except that values contain any positive int, and a result and weight array-->
    <!--* the result array is the possible outcomes of the quiz-->
    <!--* the weight array is the total score that corresponds to different results-->
    <!--* weight array is always one element more than result. Quiz takes the intervals from weight to choose the result-->
    <!--* first element of weight array is always the lowest score possible from the quiz-->
    <!--* last element of weight array is always the highest score possible from the quiz + 1 -->
    <string-array name="personality_quizzes">
        <item> {
            \"title\":\"What Game of Thrones House are you?\",
            \"questions\" :
    [
            {
            \"query\": \"Thoughts on throwing kids out windows?\",
            \"answers\" : [\"Morally Repugnant\",\"what is this quiz\", \"If it has to be done\",\"Only if it\'s a prince\"],
            \"values\" : [2, 5, 9, 18]
            },

            {
            \"query\": \"If your clothes had to be one color for the rest of your life which of these would they be?\",
            \"answers\" : [\"Grey\", \"Green\",\"Red\", \"Yellow\"],
            \"values\" : [2, 5, 9, 18]
            },

            {
            \"query\": \"If you could have a pet what would it be?\",
            \"answers\" : [\"A wolf\",\"A hound\", \"A baby dragon\",\"Pets are silly\"],
            \"values\" : [2, 5, 9, 18]
            },

            {
            \"query\": \"If your house could be by one of these things?\",
            \"answers\" : [\"A giant wall\",\"An ocean\", \"A mountain\",\"A cliff\"],
            \"values\" : [2, 5, 9, 18]
            }
    ],
            \"result\" : [\"Stark\", \"Targaryen\", \"Lannister\"],
            \"weight\" : [8, 15, 40, 73]
            }
        </item>

        <item>{
            \"title\": \"Your Ultimate Meaning Of Life\",
            \"questions\" :
    [
            {
            \"query\": \"Do you like coffee?\",
            \"answers\" : [\"What is coffee\",\"No\", \"Yes\",\"I am coffee\"],
            \"values\" : [0, 1, 2, 3]
            },

            {
            \"query\": \"Are you rich?\",
            \"answers\" : [\"No\", \"I go to Duke and pay full tuition\",\"I hate my life\", \"Can not tell you\"],
            \"values\" : [1, 3, 0, 2]
            },

            {
            \"query\": \"Are you awesome?\",
            \"answers\" : [\"No\", \"yes\"],
            \"values\" : [0, 1]
            }

    ],
            \"result\" : [\"Your life is meaningless and your existence is an empty quest that does not have an end, just like everyone else\'s\",
                            \"You are a humanitarian warrior who gets rich from an European NGO and eventually dies from malaria in Zimbabwe\",
                            \"You will become a doctor and then go to Hollywood to pursue your acting dream, only to realize that you are Asian\"],
            \"weight\" : [0, 3, 6, 8]
        }</item>

        <item>{
            \"title\": \"Objective Spirit Animal\",
            \"questions\" :
    [
            {
            \"query\": \"If you could be an object what would you be?\",
            \"answers\" : [\"A lamp\",\"A mug\", \"A speaker\",\"A trolley\"],
            \"values\" : [0, 1, 2, 3]
            },

            {
            \"query\": \"What is your favorite color?\",
            \"answers\" : [\"Blue\", \"Duke Blue\",\"Light Baby Ugly Blue\", \"Not Blue\"],
            \"values\" : [0, 1, 2, 3]
            }
    ],
            \"result\" : [\"Blue liger\", \"You shouldn\'t be here\", \"Nonblue liger\"],
            \"weight\" : [0, 4, 5, 7]
        }</item>

        <item>{
            \"title\": \"Another Objective Spirit Animal\",
            \"questions\" :
    [
            {
            \"query\": \"If you could be an object what would you be?\",
            \"answers\" : [\"A lamp\",\"A mug\", \"A speaker\",\"A trolley\"],
            \"values\" : [0, 1, 2, 3]
            },

            {
            \"query\": \"What is your favorite color?\",
            \"answers\" : [\"Blue\", \"Duke Blue\",\"Light Baby Ugly Blue\", \"Not Blue\"],
            \"values\" : [0, 1, 2, 3]
            }
    ],
            \"result\" : [\"Blue liger\", \"You shouldn\'t be here\", \"Nonblue liger\"],
            \"weight\" : [0, 4, 5, 7]
        }</item>


    </string-array>


</resources>
